--- a/game/game.css
+++ b/game/game.css
@@ -8,4 +8,7 @@ body {
   display: none;
   width: 100%;
   text-align: center;
+  font-size: 50px;
+  font-weight: 800;
+  font-family: sans-serif;
 }
