--- a/game/game.css
+++ b/game/game.css
@@ -12,3 +12,14 @@ body {
   font-weight: 800;
   font-family: sans-serif;
 }
+
+#safari {
+  position: absolute;
+  background: white;
+  display: none;
+  width: 100%;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 800;
+  font-family: sans-serif;
+}
